# nuit-info-2022-backend

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  db  docker-compose.yml  mod.rs
api/: Cargo.toml
api/src/: auth_middleware.rs  db.rs  jwt.rs  lib.rs
api/src/graphql/: schema.rs
api/src/graphql/mutation/: game.rs  mod.rs  note.rs  questions.rs  scope.rs  user.rs
api/src/graphql/query/: game.rs  mod.rs  note.rs  questions.rs  user.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/game/: mutation.rs  query.rs
core/src/note/: mod.rs  mutation.rs  query.rs
core/src/questions/: mutation.rs  query.rs
core/src/scope/: mod.rs  mutation.rs  query.rs
core/src/user/: mod.rs  mutation.rs  query.rs
core/tests/: mock.rs  prepare.rs
entity/: Cargo.toml
entity/src/: game.rs  lib.rs  prelude.rs  questions.rs  scope.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20221127_134800_create_user_table.rs  m20221127_135535_create_scope_table.rs  m20221201_200530_questions.rs  m20221201_224747_game.rs  main.rs
scraping/: export_csv2json.py  scrap_sida_info_service_faq.py  sexualite_info_sante.py
scraping/resultats/: SIS_articles.json  questions.json  sexInSer_articles.json
src/: database.rs  jwt.rs  main.rs  my_middleware.rs
src/controllers/: auth.rs  users.rs
src/models/: auth.rs  users.rs
src/my_middleware/: mod.rs  my_middleware.rs
src/utils/: utils.rs
