[package]
name = "nuit-info-2022-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.3.4", features = ["cors"] }
log = "0.4"
mysql = {version = "*", default-features = false, features = ["minimal"]}
sha2="0.10.6"
jwt-simple = "0.10"